--- a/www/templates/estoque.html
+++ b/www/templates/estoque.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
-<body class="bg-dark">
+<body class="bg-light">
 	<header class="navbar bg-success navbar-dark">
 		<h1 class="navbar-brand">Argila Mais - Gestão de Estoque</h1>
 	</header>
